--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Reset default body margin */
+body {
+  margin: 0 !important;
+  padding: 0 !important;
+}
